crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_items_scientific_arbitrary.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
assertion_line: 639
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"minItems\":1e+1,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => (arr.len() as u64) >= 10,
            _ => false,
        }
