crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_length.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"minLength\":3,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => (s.chars().count() as u64) >= 3,
            _ => false,
        }
