crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_equal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maximum\":5,\"minimum\":5,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::eq(n, 5u64),
            _ => false,
        }
