crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_equal_float.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maximum\":1.5,\"minimum\":1.5,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => (__num::ge(n, 1.5f64)) && (__num::le(n, 1.5f64)),
            _ => false,
        }
