crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_equal_float_arbitrary.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maximum\":1.5,\"minimum\":1.5,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => {
                (__num::check_compiled_bound(n, 3u8, "1.5"))
                    && (__num::check_compiled_bound(n, 1u8, "1.5"))
            }
            _ => false,
        }
