crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_equal_negative.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maximum\":-3,\"minimum\":-3,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::eq(n, -3i64),
            _ => false,
        }
