crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_items_equal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maxItems\":3,\"minItems\":3,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) == 3,
            _ => false,
        }
