crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_length_equal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maxLength\":5,\"minLength\":5,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => {
                let len = s.chars().count();
                (len as u64) >= 5 && (len as u64) <= 5
            }
            _ => false,
        }
