crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_properties_equal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maxProperties\":2,\"minProperties\":2}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => (obj.len() as u64) == 2,
            _ => true,
        }
