crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_max_unequal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maximum\":10,\"minimum\":1,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => (__num::ge(n, 1u64)) && (__num::le(n, 10u64)),
            _ => false,
        }
